javadocs_warning.txt
7 errors
71 warnings
:service:storage:impl:javadoc UP-TO-DATE
:service:server:host:javadoc
service\server\host\src\main\java\com\emc\pravega\service\server\host\ZKSegmentContainerManager.java:62: error: bad use of '>'
 * The SegmentName -> ContainerId mapping is done by taking the hash of the StreamSegment name and then modulo the
                    ^
1 error
:integrationtests:javadoc
integrationtests\src\main\java\com\emc\pravega\service\selftest\Actor.java:149: warning: no @param for cause
    protected void fail(Throwable cause) {
                   ^
integrationtests\src\main\java\com\emc\pravega\service\selftest\Actor.java:144: warning: no @return
    protected abstract String getLogId();
                              ^
integrationtests\src\main\java\com\emc\pravega\service\selftest\Actor.java:139: warning: no @return
    protected abstract CompletableFuture<Void> run();
testcommon\src\main\java\com\emc\pravega\testcommon\AssertExtensions.java:240: error: malformed HTML
     * Asserts that actual < expected.
                           ^
testcommon\src\main\java\com\emc\pravega\testcommon\AssertExtensions.java:251: error: malformed HTML
     * Asserts that actual <= expected.
                           ^
testcommon\src\main\java\com\emc\pravega\testcommon\AssertExtensions.java:262: error: bad use of '>'
     * Asserts that actual > expected.
                           ^
testcommon\src\main\java\com\emc\pravega\testcommon\AssertExtensions.java:273: error: bad use of '>'
     * Asserts that actual >= expected.
                           ^
testcommon\src\main\java\com\emc\pravega\testcommon\ErrorInjector.java:83: warning: no @return
    public static <T extends Throwable> CompletableFuture<Void> throwAsyncExceptionIfNeeded(ErrorInjector<T> injector) {
                                                                ^
testcommon\src\main\java\com\emc\pravega\testcommon\ErrorInjector.java:100: warning: no @return
    public T getLastCycleException() {
             ^
testcommon\src\main\java\com\emc\pravega\testcommon\ErrorInjector.java:112: warning: no @return
    public static <T extends Throwable> T getLastCycleException(ErrorInjector<T>... injectors) {
                                          ^
testcommon\src\main\java\com\emc\pravega\testcommon\ThreadPooledTestSuite.java:49: warning: no @return
    protected ScheduledExecutorService executorService() {
                                       ^
testcommon\src\main\java\com\emc\pravega\testcommon\ThreadPooledTestSuite.java:57: warning: no @return
    protected int getThreadPoolSize() {
                  ^
4 errors

